# statusline

./: .mailmap  COPYING.MIT  Cargo.toml  README.md  default.nix  license.txt  statusline.nix
npins/: sources.json
src/: args.rs  block.rs  bottom.rs  chassis.rs  default.rs  file.rs  git.rs  icon.rs  lib.rs  main.rs  prompt.rs  shell.sh  style.rs  time.rs  top.rs  venv.rs  virt.rs  workgroup.rs
src/block/: build_info.rs  elapsed.rs  git.rs  hostuser.rs  jobs.rs  mail.rs  nix_shell.rs  return_code.rs  root_shell.rs  separator.rs  ssh.rs  time.rs  venv.rs  workdir.rs
