[package]
name = "statusline"
version = "0.17.5"
edition = "2021"
description = "Simple and fast bash PS1 line with useful features"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/yuki0iq/statusline"

[dependencies]
pwd = "1.4"
chrono = "0.4"
terminal_size = "0.3"
anyhow = "1.0"
fahtsex = "0.2"
unicode-width = "0.1"
base64 = "0.22"
orion = "0.17"
rustix = { version = "0.38", features = ["fs", "process", "stdio"] }
libc = "0.2"
memmapix = "0.7.6"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

