[package]
name = "statusline"
version = "0.21.0"
edition = "2024"
description = "Simple and fast bash PS1 line with useful features"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/yuki0iq/statusline"
categories = ["command-line-utilities"]
keywords = ["bash", "prompt", "shell-prompt"]

[dependencies]
pwd = "1.4"
chrono = "0.4"
terminal_size = "0.4"
anyhow = "1.0"
unicode-width = "0.2"
base64 = "0.22"
orion = "0.17"
rustix = { version = "1.0", features = ["fs", "process", "stdio", "system"], default-features = false }
libc = "0.2"
argh = "0.1"
linux-raw-sys = "0.11"
const_format = "0.2.35"
memmap2 = "0.9.9"
linkme = "0.3.35"
heck = "0.5.0"
bitflags = "2.10.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11.2"

